2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j5

	* Handle SID in makeGalleryURL

2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j4

	* Integrated code to init.php so that Gallery knows the phpBB2 user.

2003-11-20 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j3

	* First primitive integration works

2003-11-19 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j2

	*  Sync against HEAD

****************************************************************************

2003-11-18 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j1

	* Start phpBB2 branch (again)

****************************************************************************

2003-11-19  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b24

        * Added check_versions to gallery check page, to check that gallery
          is up-to-date before running.

	* Default to high tech slide show unless we know it won't work.

        * Moved checkVersions() to util.php, and fixed a logical bug in it.

        * Modified checkVersions to return ($success, $fail, $warn)

	* Removed warning from check.inc.

        * Tweaked tools/build_manifest to make it simpler, and clearer.

	* Fixed CSS file so text is readable with bluemod skin.

        * Update manifest.inc. 

2003-11-18 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b23

	* Change: Code cleanup in setup files. Moved initialization things into
		  init.php.

	  Note: This also fixes a Bug where fs_win32.php was loaded when in win32.
		This also fixes a Bug when PHP has no gettext and diagnostics were called.

2003-11-17  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-cvs-b22

	* Fix from Bharat to reduce time limit errors in large galleries.

2003-11-17 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b21

        * Bigfix: Changed check in confirm.inc to
          catch empty fields which are new.

2003-11-15  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.2-cvs-b20

	* Fixed bug where focus on new password page was an uneditable field.
