@@ -1,6 +1,10 @@
+2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j6
+
+	* Handle header and footer correct.
+
 2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j5
 
-	* Handle SID in makeGalleryURL
+	* Handle SID in makeGalleryURL.
 
 2003-11-22 Jens Tkotz <jens@peino.de> 1.4.2-phpBB2-cvs-j4
 
